# ChangeLog for dev-perl/Lab-Instrument
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  25 Oct 2011; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Removed no-herd from herd tag in metadata.xml

*Lab-Instrument-2.01 (22 Jun 2010)

  22 Jun 2010; Andreas K. Huettel (dilfridge) <mail@akhuettel.de>
  +Lab-Instrument-2.01.ebuild, +metadata.xml:
  New package
